--- a/src/opt/elasticsearch/config/elasticsearch.yml
+++ b/src/opt/elasticsearch/config/elasticsearch.yml
@@ -5,13 +5,13 @@
 # the locations (a la RAID 0) on a file level, favouring locations with most free
 # space on creation. For example:
 #path.data: /opt/elasticsearch/$inst/data1,/opt/elasticsearch/$inst/data2
-path.data: /opt/esvol/data
+path.data: /esvol/data
 # Path to log files:
-path.logs: /opt/esvol/log
+path.logs: /esvol/log
 # Path to where plugins are installed:
-path.plugins: /opt/esvol/plugins
+path.plugins: /esvol/plugins
 # Path to temporary files:
-path.work: /opt/esvol/work
+path.work: /esvol/work
 
 # Cluster name identifies your cluster for auto-discovery. If you're running
 # multiple clusters on the same network, make sure you're using unique names.
@@ -36,11 +36,6 @@ discovery.zen.ping.multicast.enabled: false
 # Configure an initial list of master nodes in the cluster
 # to perform discovery when new nodes (master or data) are started:
 #discovery.zen.ping.unicast.hosts: ["host1", "host2:port"]
-discovery.zen.ping.unicast.hosts: [
-{{ range $server := .es_cluster_servers }}
-  "{{ $server.Value }}",
-{{ end }}
-]
 
 # Elasticsearch performs poorly when JVM starts swapping so ensure that
 # it _never_ swaps.
