Corrected curl download for confd.

--- a/systemd/elasticsearch.service
+++ b/systemd/elasticsearch.service
@@ -13,6 +13,8 @@ After=fleet.service
 After=consul.service
 
 [Service]
+TimeoutStartSec=0
+
 # Get CoreOS environmental variables
 EnvironmentFile=/etc/environment
 
