--- a/src/etc/confd/conf.d/elasticsearch.yml.toml
+++ b/src/etc/confd/conf.d/elasticsearch.yml.toml
@@ -6,14 +6,14 @@ src = "elasticsearch.yml.tmpl"
 # The location to place the rendered configuration file
 dest = "/esvol/config/elasticsearch.yml"
 
-# The consul keys or directory to watch.  This is where the information to fill in the template will come from.
+# The keys or directory to watch.  This is where the information to fill in the template will come from.
 keys = [
     "/es/host",
     "/es/cluster",
 ]
 
 # File ownership and mode information
-owner = "root"
+owner = "elasticsearch"
 mode = "0644"
 
 # These are the commands that will be used to check whether the rendered config is
