--- a/src/etc/confd/conf.d/elasticsearch.yml.toml
+++ b/src/etc/confd/conf.d/elasticsearch.yml.toml
@@ -8,8 +8,8 @@ dest = "/esvol/config/elasticsearch.yml"
 
 # The keys or directory to watch.  This is where the information to fill in the template will come from.
 keys = [
-    "/es/host",
-    "/es/cluster",
+    "/services/logging/es/host",
+    "/services/logging/es/cluster",
 ]
 
 # File ownership and mode information
