--- a/systemd/elasticsearch.service
+++ b/systemd/elasticsearch.service
@@ -4,33 +4,55 @@ Description=Elasticsearch
 # Requirements
 Requires=docker.service
 Requires=fleet.service
-Requires=consul.service
 
 # Dependency ordering and binding
-Before=logstash.service
 After=docker.service
 After=fleet.service
-After=consul.service
 
 [Service]
 TimeoutStartSec=0
 
-# Get CoreOS environmental variables
+# Set environmental variables
 EnvironmentFile=/etc/environment
+Environment="ES_CLUSTER=es01"
 
 ExecStartPre=/usr/bin/mkdir -p /es/data
-ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch
-ExecStart=/usr/bin/docker run --rm --name %p -v /es/data:/esvol/data -p 9200:9200 -p 9300:9300 -e KV_HOST=${COREOS_PRIVATE_IPV4} -e ES_CLUSTER=elk01 cgswong/elasticsearch
-#ExecStart=/usr/bin/docker run --rm --name %p -v /es/data:/esvol/data -p 9200:9200 -p 9300:9300 -e KV_TYPE=consul -e KV_HOST=${COREOS_PRIVATE_IPV4} -e ES_CLUSTER=elk01 cgswong/elasticsearch
-#ExecStartPost=/usr/bin/etcdctl set /services/logging/es/host/%H '{"ipv4":${COREOS_PRIVATE_IPV4},"http_port":9200,"cluster_port":9300,"cluster":"elk01"}'
-ExecStartPost=/usr/bin/etcdctl set /services/logging/es/host/%H "${COREOS_PRIVATE_IPV4}:9200"
-#ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/host/%H -XPUT -d value='{"ipv4":${COREOS_PRIVATE_IPV4},"http_port":9200,"cluster_port":9300,"cluster":"elk01"}'
-#ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/host/%H -XPUT -d value="${COREOS_PRIVATE_IPV4}:9200"
-ExecStop=/usr/bin/docker stop %p
-ExecStop=/usr/bin/docker kill %p
-ExecStop=/usr/bin/docker rm %p
-ExecStopPost=/usr/bin/etcdctl rmdir /services/logging/es/host/%H
-#ExecStopPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/host/%H -XDELETE
+ExecStartPre=-/usr/bin/docker kill %p
+ExecStartPre=-/usr/bin/docker rm %p
+ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch:v1.4.3
+
+ExecStart=/bin/bash -c '\
+  if $(curl -f ${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}) then \
+      UNICAST_HOSTS=$(for key in $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}); do \
+        ip=$(echo $key | sed s/\/services\/logging\/es\/${ES_CLUSTER}\///g") ; \
+        port=$(etcdctl get $key | awk -v RS=',"' -F: '/^cluster_port/ {print $2}' | sed "s/}//g") ; \
+        echo "$ip:$port" ; \
+      done \
+      | paste -s -d","); \
+  else \
+      UNICAST_HOSTS=""; \
+  fi; \
+  /usr/bin/docker run \
+    --rm \
+    --name %p \
+    -p 9200:9200 \
+    -v /es/data:/esvol/data \
+    -e ES_CLUSTER=${ES_CLUSTER} \
+    cgswong/elasticsearch:v1.4.3 \
+    --discovery.zen.ping.unicast.hosts=$UNICAST_HOSTS'
+
+ExecStartPost=/usr/bin/etcdctl set /services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} '{"host":"%H","http_port":9200,"cluster_port":9300}'
+
+ExecStop=-/usr/bin/docker stop %p
+ExecStop=-/usr/bin/docker kill %p
+ExecStop=-/usr/bin/docker rm %p
+
+ExecStopPost=/usr/bin/bash -c '\
+  if [ $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER} | wc -l) -eq 0 ]; then \
+    etcdctl rmdir /services/logging/es/${ES_CLUSTER} ; \
+  else \
+    etcdctl rmdir /services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} ; \
+  fi'
 
 [X-Fleet]
 Conflicts=%p.service
