--- a/systemd/elasticsearch-discovery.service
+++ b/systemd/elasticsearch-discovery.service
@@ -10,14 +10,14 @@ ExecStart=/bin/bash -c '\
   while true; do \
     curl -f ${COREOS_PRIVATE_IPV4}:9200; \
     if [ "$?" = "0" ]; then \
-      etcdctl set /services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} '{"host":"%H","http_port":9200,"cluster_port":9300}' --ttl 60; \
+      curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":9200,"cluster_port":9300}' -d ttl=60 ;\
     else \
-      etcdctl rmdir /services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4}; \
+      curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XDELETE ;\
     fi; \
     sleep 45; \
   done'
 
-ExecStop=/usr/bin/etcdctl rmdir /services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4}
+ExecStop=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XDELETE
 
 [X-Fleet]
 MachineOf=elasticsearch.service
