--- a/systemd/elasticsearch.service
+++ b/systemd/elasticsearch.service
@@ -22,10 +22,11 @@ ExecStartPre=-/usr/bin/docker rm %p
 ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch:v1.4.4
 
 ExecStart=/bin/bash -c '\
-  if $(curl -f ${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}) then \
+  curl -f ${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER} ; \
+  if [ $? -eq 0 ]; then \
       UNICAST_HOSTS=$(for key in $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}); do \
-        ip=$(echo $key | sed s/\/services\/logging\/es\/${ES_CLUSTER}\///g") ; \
-        port=$(etcdctl get $key | awk -v RS=',"' -F: '/^cluster_port/ {print $2}' | sed "s/}//g") ; \
+        ip=$(echo $key | sed "s/\/services\/logging\/es\/${ES_CLUSTER}\///g") ; \
+        port=$(etcdctl get $key | awk -v RS=\',"\' -F: \'/^cluster_port/ {print $2}\' | sed "s/}//g") ; \
         echo "$ip:$port" ; \
       done \
       | paste -s -d","); \
