Removed code for dynamic cluster to other branch.

--- a/systemd/elasticsearch.service
+++ b/systemd/elasticsearch.service
@@ -21,39 +21,17 @@ ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
 ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch:v1.4.4
 
-ExecStart=/bin/bash -c '\
-  curl -f ${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER} ; \
-  if [ $? -eq 0 ]; then \
-      UNICAST_HOSTS=$(for key in $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}); do \
-        ip=$(echo $key | sed "s/\/services\/logging\/es\/${ES_CLUSTER}\///g") ; \
-        port=$(etcdctl get $key | awk -v RS=\',"\' -F: \'/^cluster_port/ {print $2}\' | sed "s/}//g") ; \
-        echo "$ip:$port" ; \
-      done \
-      | paste -s -d","); \
-  else \
-      UNICAST_HOSTS=""; \
-  fi; \
-  /usr/bin/docker run \
-    --rm \
-    --name %p \
-    -p 9200:9200 \
-    -v /es/data:/esvol/data \
-    -e ES_CLUSTER=${ES_CLUSTER} \
-    cgswong/elasticsearch:v1.4.4 \
-    --discovery.zen.ping.unicast.hosts=$UNICAST_HOSTS'
+ExecStart=/usr/bin/docker run --rm --name %p -p 9200:9200 -v /es/data:/esvol/data -e ES_CLUSTER=${ES_CLUSTER} cgswong/elasticsearch:v1.4.4
 
-ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":9200,"cluster_port":9300}'
+ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/host/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":9200,"cluster_port":9300},"cluster_name":"$ES_CLUSTER"}'
+ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/cluster -XPUT -d value="${ES_CLUSTER}"
 
 ExecStop=-/usr/bin/docker stop %p
 ExecStop=-/usr/bin/docker kill %p
 ExecStop=-/usr/bin/docker rm %p
 
-ExecStopPost=/usr/bin/bash -c '\
-  if [ $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER} | wc -l) -eq 0 ]; then \
-    curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER} -XDELETE ; \
-  else \
-    curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XDELETE ; \
-  fi'
+ExecStopPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/cluster/${ES_CLUSTER} -XDELETE
+ExecStopPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/host/${COREOS_PRIVATE_IPV4} -XDELETE
 
 [X-Fleet]
 Conflicts=%p.service
