Added AWS functionality, update README.

--- a/src/esvol/config/elasticsearch.yml
+++ b/src/esvol/config/elasticsearch.yml
@@ -16,11 +16,10 @@ path.work: /esvol/work
 # Cluster name identifies your cluster for auto-discovery. If you're running
 # multiple clusters on the same network, make sure you're using unique names.
 #cluster.name: es01
-#cluster.name: "{{getv "/services/logging/es/cluster"}}"
 
 # Node names are generated dynamically on startup, so you're relieved
 # from configuring them manually. You can tie this node to a specific name:
-#node.name: ES_PORT_9200_TCP_ADDR
+#node.name: ES_NODE
 
 # Allow recovery process after N nodes in a cluster are up:
 #gateway.recover_after_nodes: 1
@@ -43,3 +42,12 @@ discovery.zen.ping.multicast.enabled: false
 # it _never_ swaps.
 # Set this property to true to lock the memory:
 bootstrap.mlockall: true
+
+# AWS configurations
+#cloud.aws.access_key: AWS_ACCESS_KEY
+#cloud.aws.secret_key: AWS_SECRET_KEY
+#cloud.node.auto_attributes: true
+#discovery.type: ec2
+#gateway.type: s3
+#repositories.s3.bucket: "AWS_S3_BUCKET"
+#network.public_host: _ec2_
