--- a/systemd/elasticsearch-consul.service
+++ b/systemd/elasticsearch-consul.service
@@ -24,9 +24,9 @@ LimitMEMLOCK=infinity
 ExecStartPre=/usr/bin/mkdir -p /es/data
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
-ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch:v1.4.4
+ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch
 
-ExecStart=/usr/bin/docker run --rm --name %p -p 9200:9200 -v /es/data:/esvol/data -e ES_CLUSTER=${ES_CLUSTER} cgswong/elasticsearch:v1.4.4
+ExecStart=/usr/bin/docker run --name %p -P -v /es/data:/esvol/data -e ES_CLUSTER=${ES_CLUSTER} cgswong/elasticsearch
 
 ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/host/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":9200,"cluster_port":9300},"cluster_name":"$ES_CLUSTER"}'
 ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/cluster -XPUT -d "${ES_CLUSTER}"
