--- a/systemd/elasticsearch.service
+++ b/systemd/elasticsearch.service
@@ -22,9 +22,9 @@ LimitMEMLOCK=infinity
 ExecStartPre=/usr/bin/mkdir -p /es/data
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
-ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch:v1.4.4
+ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch
 
-ExecStart=/usr/bin/docker run --rm --name %p -p 9200:9200 -v /es/data:/esvol/data -e ES_CLUSTER=${ES_CLUSTER} cgswong/elasticsearch:v1.4.4
+ExecStart=/usr/bin/docker run --name %p -P -v /es/data:/esvol/data -e ES_CLUSTER=${ES_CLUSTER} cgswong/elasticsearch
 ExecStart=/bin/bash -c '\
   curl -f ${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}; \
   if [ "$?" = "0" ]; then \
