--- a/systemd/elasticsearch.service
+++ b/systemd/elasticsearch.service
@@ -19,12 +19,10 @@ Environment="ES_CLUSTER=es01"
 LimitNOFILE=65535
 LimitMEMLOCK=infinity
 
-ExecStartPre=/usr/bin/mkdir -p /es/data
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
 ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch
 
-ExecStart=/usr/bin/docker run --name %p -P -v /es/data:/esvol/data -e ES_CLUSTER=${ES_CLUSTER} cgswong/elasticsearch
 ExecStart=/bin/bash -c '\
   curl -f ${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}; \
   if [ "$?" = "0" ]; then \
@@ -43,7 +41,7 @@ ExecStart=/bin/bash -c '\
     --publish 9300:9300 \
     --env ES_CLUSTER=${ES_CLUSTER} \
     --volume /es/data:/esvol/data \
-    cgswong/elasticsearch:v1.4.4 \
+    cgswong/elasticsearch \
     --node.name=%H \
     --network.publish_host=${COREOS_PRIVATE_IPV4} \
     --discovery.zen.ping.multicast.enabled=false \
