--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
   override:
     - docker info
     - if [ -e ~/docker/image.tar ]; then docker load --input ~/docker/image.tar; fi
-    - docker build -t cgswong/docker-elasticsearch:v1.5.0 v1.5.0
+    - docker build -t cgswong/docker-elasticsearch v1.5.0
     - mkdir -p ~/docker; docker save cgswong/docker-elasticsearch > ~/docker/image.tar
 
 test:
