--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
 test:
   override:
     - docker run -d --publish 9200:9200 --publish 9300:9300 cgswong/docker-elasticsearch; sleep 10
-    - curl -L http://localhost:9200/_cluster/state
+    - curl --retry 10 --retry-delay 5 -Lv http://localhost:9200
 
 deployment:
   hub:
