--- a/systemd/elasticsearch-consul.service
+++ b/systemd/elasticsearch-consul.service
@@ -12,7 +12,9 @@ After=fleet.service
 After=consul.service
 
 [Service]
-TimeoutStartSec=0
+TimeoutStartSec=10m
+Restart=on-failure
+RestartSec=5s
 
 # Set environmental variables
 EnvironmentFile=/etc/environment
@@ -26,7 +28,7 @@ ExecStartPre=-/usr/bin/docker rm %p
 ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch
 
 ExecStart=/bin/bash -c '\
-  curl -f ${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}; \
+  curl -f ${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/${ES_CLUSTER}; \
   if [ "$?" = "0" ]; then \
       UNICAST_HOSTS=$(for key in $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}); do \
         ip=$(echo $key | sed "s/\/services\/logging\/es\/${ES_CLUSTER}\///g") ; \
@@ -42,14 +44,13 @@ ExecStart=/bin/bash -c '\
     --publish 9200:9200 \
     --publish 9300:9300 \
     --env ES_CLUSTER=${ES_CLUSTER} \
-    --volume /es/data:/esvol/data \
     cgswong/elasticsearch \
     --node.name=%H \
     --network.publish_host=${COREOS_PRIVATE_IPV4} \
     --discovery.zen.ping.multicast.enabled=false \
     --discovery.zen.ping.unicast.hosts=$UNICAST_HOSTS'
 
-ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/host/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":9200,"cluster_port":9300},"cluster_name":"$ES_CLUSTER"}'
+ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/host/${COREOS_PRIVATE_IPV4} -XPUT -d '{"host":"%H","http_port":9200,"cluster_port":9300},"cluster_name":"$ES_CLUSTER"}'
 ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/cluster -XPUT -d "${ES_CLUSTER}"
 
 ExecStop=-/usr/bin/docker stop %p
