--- a/circle.yml
+++ b/circle.yml
@@ -8,12 +8,12 @@ dependencies:
   override:
     - docker info
     - if [ -e ~/docker/image.tar ]; then docker load --input ~/docker/image.tar; fi
-    - docker build -t cgswong/docker-elasticsearch .
-    - mkdir -p ~/docker; docker save cgswong/docker-elasticsearch > ~/docker/image.tar
+    - docker build -t cgswong/elasticsearch .
+    - mkdir -p ~/docker; docker save cgswong/elasticsearch > ~/docker/image.tar
 
 test:
   override:
-    - docker run -d --publish 9200:9200 --publish 9300:9300 cgswong/docker-elasticsearch; sleep 10
+    - docker run -d --publish 9200:9200 --publish 9300:9300 cgswong/elasticsearch; sleep 10
     - curl --retry 10 --retry-delay 5 -Lv http://localhost:9200
 
 deployment:
