--- a/systemd/elasticsearch-discovery@.service
+++ b/systemd/elasticsearch-discovery@.service
@@ -25,8 +25,7 @@ EnvironmentFile=/etc/environment
 ExecStart=/bin/bash -c '\
   while true; do \
     curl -Ls ${COREOS_PRIVATE_IPV4}:9200
-    if [ $? -eq 0 ]; then \
-      curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XPUT -d value=\'{"host":"%H","http_port":9200,"cluster_port":9300}\' --ttl 60 ;\
+    [ $? -eq 0 ] && curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XPUT -d value=\'{"host":"%H","http_port":9200,"cluster_port":9300}\' --ttl 60 ;\
     sleep 45 ;\
   done'
 
