--- a/systemd/elasticsearch@.service
+++ b/systemd/elasticsearch@.service
@@ -44,8 +44,7 @@ ExecStart=/bin/bash -c '\
   fi ;\
   /usr/bin/docker run \
     --name %p \
-    --publish 9200:9200 \
-    --publish 9300:9300 \
+    -P \
     --volumes-from elasticsearch-dv-%i \
     --env ES_CLUSTER=${ES_CLUSTER} \
     monsantoco/elasticsearch \
@@ -54,7 +53,7 @@ ExecStart=/bin/bash -c '\
     --discovery.zen.ping.multicast.enabled=false \
     --discovery.zen.ping.unicast.hosts=$UNICAST_HOSTS'
 
-ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":9200,"cluster_port":9300}'
+ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":$(docker port %p | grep 9200 | cut -d: -f2),"cluster_port":$(docker port %p | grep 9300 | cut -d: -f2)}'
 
 ExecStop=-/usr/bin/docker stop %p
 ExecStop=-/usr/bin/docker kill %p
