--- a/systemd/elasticsearch-discovery@.service
+++ b/systemd/elasticsearch-discovery@.service
@@ -13,7 +13,7 @@ After=etcd.service
 After=fleet.service
 After=elasticsearch@%i.service
 BindsTo=elasticsearch@%i.service
-
+PartOf=elasticsearch@%i.service
 
 [Service]
 TimeoutStartSec=10m
@@ -26,9 +26,9 @@ Environment="ES_CLUSTER=es01"
 
 ExecStart=/bin/bash -c '\
   while true; do \
-    curl -Ls ${COREOS_PRIVATE_IPV4}:9200 ;\
-    [ $? -eq 0 ] && curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XPUT -d value=\'{"host":"%H","http_port":9200,"cluster_port":9300}\' --ttl 60 ;\
-    sleep 45 ;\
+    curl -Ls ${COREOS_PRIVATE_IPV4}:9200 > /dev/null ;\
+    [ $? -eq 0 ] && curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4}?ttl=60 -XPUT -d value=\'{"host":"%H","http_port":9200,"cluster_port":9300}\' ;\
+    sleep 50 ;\
   done'
 
-ExecStop=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/${COREOS_PRIVATE_IPV4} -XDELETE
+ExecStop=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XDELETE
