--- a/systemd/elasticsearch-discovery@.service
+++ b/systemd/elasticsearch-discovery@.service
@@ -32,3 +32,6 @@ ExecStart=/bin/bash -c '\
   done'
 
 ExecStop=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XDELETE
+
+[X-Fleet]
+MachineOf=elasticsearch@%i.service
