--- a/systemd/elasticsearch@.service
+++ b/systemd/elasticsearch@.service
@@ -30,7 +30,7 @@ LimitMEMLOCK=infinity
 
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
-ExecStartPre=/usr/bin/docker pull monsantoco/elasticsearch
+ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch
 
 ExecStart=/bin/bash -c '\
   curl -sf ${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host > /dev/null ;\
@@ -48,7 +48,7 @@ ExecStart=/bin/bash -c '\
     -P \
     --volumes-from elasticsearch-dv-%i \
     --env ES_CLUSTER=${ES_CLUSTER} \
-    monsantoco/elasticsearch \
+    cgswong/elasticsearch \
     --node.name=%H \
     --network.publish_host=${COREOS_PRIVATE_IPV4} \
     --discovery.zen.ping.multicast.enabled=false \
