--- a/systemd/elasticsearch-consul@.service
+++ b/systemd/elasticsearch-consul@.service
@@ -28,8 +28,8 @@ Environment="ES_CLUSTER=es01"
 LimitNOFILE=65535
 LimitMEMLOCK=infinity
 
-ExecStartPre=-/usr/bin/docker kill %p
-ExecStartPre=-/usr/bin/docker rm %p
+ExecStartPre=-/usr/bin/docker kill %p-%i
+ExecStartPre=-/usr/bin/docker rm %p-%i
 ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch
 
 ExecStart=/bin/bash -c '\
@@ -45,8 +45,9 @@ ExecStart=/bin/bash -c '\
       UNICAST_HOSTS="" ;\
   fi ;\
   /usr/bin/docker run \
-    --name %p \
+    --name %p-%i \
     -P \
+    --volumes-from elasticsearch-dv-%i \
     --env ES_CLUSTER=${ES_CLUSTER} \
     cgswong/elasticsearch \
     --node.name=%H \
@@ -56,9 +57,9 @@ ExecStart=/bin/bash -c '\
 
 ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/${ES_CLSUTER}/host/${COREOS_PRIVATE_IPV4} -XPUT -d \'{"host":"%H","http_port":$(docker port %p | grep 9200 | cut -d: -f2),"cluster_port":$(docker port %p | grep 9300 | cut -d: -f2)}\'
 
-ExecStop=-/usr/bin/docker stop %p
-ExecStop=-/usr/bin/docker kill %p
-ExecStop=-/usr/bin/docker rm %p
+ExecStop=-/usr/bin/docker stop %p-%i
+ExecStop=-/usr/bin/docker kill %p-%i
+ExecStop=-/usr/bin/docker rm %p-%i
 
 ExecStopPost=/usr/bin/bash -c '\
   if [ $(curl -Ls ${COREOS_PRIVATE_IPV4}:8500/v1/kv/services/logging/es/${ES_CLUSTER}/host?keys | sed -e "s|services\/logging\/es\/${ES_CLUSTER}\/host\/||g" -e "s|\"||g" -e "s|\[||g" -e "s|\]||g" -e "s|,|\n|g" | wc -l) -lt 1 ]; then \
