--- a/systemd/elasticsearch@.service
+++ b/systemd/elasticsearch@.service
@@ -28,8 +28,8 @@ Environment="ES_CLUSTER=es01"
 LimitNOFILE=65535
 LimitMEMLOCK=infinity
 
-ExecStartPre=-/usr/bin/docker kill %p
-ExecStartPre=-/usr/bin/docker rm %p
+ExecStartPre=-/usr/bin/docker kill %p-%i
+ExecStartPre=-/usr/bin/docker rm %p-%i
 ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch
 
 ExecStart=/bin/bash -c '\
@@ -44,7 +44,7 @@ ExecStart=/bin/bash -c '\
     UNICAST_HOSTS="" ;\
   fi ;\
   /usr/bin/docker run \
-    --name %p \
+    --name %p-%i \
     -P \
     --volumes-from elasticsearch-dv-%i \
     --env ES_CLUSTER=${ES_CLUSTER} \
@@ -54,11 +54,11 @@ ExecStart=/bin/bash -c '\
     --discovery.zen.ping.multicast.enabled=false \
     --discovery.zen.ping.unicast.hosts=$UNICAST_HOSTS'
 
-ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":$(docker port %p | grep 9200 | cut -d: -f2),"cluster_port":$(docker port %p | grep 9300 | cut -d: -f2)}'
+ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":$(docker port %p-%i | grep 9200 | cut -d: -f2),"cluster_port":$(docker port %p-%i | grep 9300 | cut -d: -f2)}'
 
-ExecStop=-/usr/bin/docker stop %p
-ExecStop=-/usr/bin/docker kill %p
-ExecStop=-/usr/bin/docker rm %p
+ExecStop=-/usr/bin/docker stop %p-%i
+ExecStop=-/usr/bin/docker kill %p-%i
+ExecStop=-/usr/bin/docker rm %p-%i
 
 ExecStopPost=/usr/bin/bash -c '\
   if [ $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}/host | wc -l) -le 2 ]; then \
