Refactor code for better maintainability.

--- a/src/var/lib/elasticsearch/config/elasticsearch.yml
+++ b/src/var/lib/elasticsearch/config/elasticsearch.yml
@@ -5,21 +5,21 @@
 # the locations (a la RAID 0) on a file level, favouring locations with most free
 # space on creation. For example:
 #path.data: /opt/elasticsearch/$inst/data1,/opt/elasticsearch/$inst/data2
-path.data: /esvol/data
+path.data: /var/lib/elasticsearch/data
 # Path to log files:
-path.logs: /esvol/logs
+path.logs: /var/lib/elasticsearch/logs
 # Path to where plugins are installed:
-path.plugins: /esvol/plugins
+path.plugins: /var/lib/elasticsearch/plugins
 # Path to temporary files:
-path.work: /esvol/work
+path.work: /var/lib/elasticsearch/work
 
 # Cluster name identifies your cluster for auto-discovery. If you're running
 # multiple clusters on the same network, make sure you're using unique names.
-#cluster.name: es01
+#cluster.name: ES_CLUSTER
 
 # Node names are generated dynamically on startup, so you're relieved
 # from configuring them manually. You can tie this node to a specific name:
-#node.name: HOSTNAME
+#node.name: ES_HOSTNAME
 
 # Allow recovery process after N nodes in a cluster are up:
 #gateway.recover_after_nodes: 1
@@ -36,7 +36,6 @@ discovery.zen.ping.multicast.enabled: false
 # Configure an initial list of master nodes in the cluster
 # to perform discovery when new nodes (master or data) are started:
 #discovery.zen.ping.unicast.hosts: ["host1", "host2:port"]
-#discovery.zen.ping.unicast.hosts: [{{ range getvs "/services/logging/es/host/*" }}"{{.}}"{{ end }}]
 
 # Elasticsearch performs poorly when JVM starts swapping so ensure that
 # it _never_ swaps.
@@ -44,10 +43,10 @@ discovery.zen.ping.multicast.enabled: false
 bootstrap.mlockall: true
 
 # AWS configurations
-#cloud.aws.access_key: AWS_ACCESS_KEY
-#cloud.aws.secret_key: AWS_SECRET_KEY
+#cloud.aws.access_key: ES_AWS_ACCESS_KEY
+#cloud.aws.secret_key: ES_AWS_SECRET_KEY
 #cloud.node.auto_attributes: true
 #discovery.type: ec2
 #gateway.type: s3
-#repositories.s3.bucket: "AWS_S3_BUCKET"
+#repositories.s3.bucket: "ES_AWS_S3_BUCKET"
 #network.public_host: _ec2_
