--- a/services/elasticsearch-discovery@.service
+++ b/services/elasticsearch-discovery@.service
@@ -26,12 +26,14 @@ Environment="ES_CLUSTER=es01"
 
 ExecStart=/bin/bash -c '\
   while true; do \
-    curl -Ls ${COREOS_PRIVATE_IPV4}:9200 > /dev/null ;\
-    [ $? -eq 0 ] && curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4}?ttl=60 -XPUT -d value=\'{"host":"%H","http_port":9200,"cluster_port":9300}\' ;\
+    http_port=$(docker port %p-%i | grep 9200 | cut -d: -f2) ;\
+    transport_port=$(docker port %p-%i | grep 9300 | cut -d: -f2) ;\
+    curl -Ls ${COREOS_PRIVATE_IPV4}:$http_port > /dev/null ;\
+    [ $? -eq 0 ] && curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4}?ttl=60 -XPUT -d value=\'{"host":"%H","http_port":$http_port,"cluster_port":$transport_port}\' ;\
     sleep 50 ;\
   done'
 
-ExecStop=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XDELETE
+ExecStop=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XDELETE
 
 [X-Fleet]
 MachineOf=elasticsearch@%i.service
