--- a/services/elasticsearch-proxy.service
+++ b/services/elasticsearch-proxy.service
@@ -4,12 +4,10 @@ Description=Elasticsearch Proxy
 # Requirements
 Requires=docker.service
 Requires=etcd.service
-Requires=fleet.service
 
 # Dependency ordering and binding
 After=docker.service
 After=etcd.service
-After=fleet.service
 
 [Service]
 TimeoutStartSec=10m
@@ -26,12 +24,11 @@ Environment="ES_CLUSTER=es01"
 LimitNOFILE=65535
 LimitMEMLOCK=infinity
 
-ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
-ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch:v1.5.0
+ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch:latest
 
 ExecStart=/bin/bash -c '\
-  curl -sf ${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host > /dev/null ;\
+  curl -sf ${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host > /dev/null ;\
   if [ $? -eq 0 ]; then \
     UNICAST_HOSTS=$(for key in $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}/host); do \
       ip=$(echo $key | cut -d/ -f7) ;\
@@ -46,7 +43,7 @@ ExecStart=/bin/bash -c '\
     --publish 9200:9200 \
     --publish 9300:9300 \
     --env ES_CLUSTER=${ES_CLUSTER} \
-    cgswong/elasticsearch:v1.5.0 \
+    cgswong/elasticsearch:latest \
     --node.name=%p \
     --node.data=false \
     --node.master=false \
@@ -54,17 +51,16 @@ ExecStart=/bin/bash -c '\
     --discovery.zen.ping.multicast.enabled=false \
     --discovery.zen.ping.unicast.hosts=$UNICAST_HOSTS'
 
-ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/proxy/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":9200,"cluster_port":9300}'
+ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/proxy/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":9200,"cluster_port":9300}'
 
-ExecStop=-/usr/bin/docker stop %p
-ExecStop=-/usr/bin/docker kill %p
-ExecStop=-/usr/bin/docker rm %p
+ExecStop=/usr/bin/docker stop %p
 
+ExecStopPost=-/usr/bin/docker rm %p
 ExecStopPost=/usr/bin/bash -c '\
   if [ $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}/proxy | wc -l) -le 2 ]; then \
-    curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/proxy?recursive=true -XDELETE ; \
+    curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/proxy?recursive=true -XDELETE ;\
   else \
-    curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/proxy/${COREOS_PRIVATE_IPV4} -XDELETE ; \
+    curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/proxy/${COREOS_PRIVATE_IPV4} -XDELETE ;\
   fi'
 
 [Install]
