--- a/services/elasticsearch@.service
+++ b/services/elasticsearch@.service
@@ -4,7 +4,6 @@ Description=Elasticsearch
 # Requirements
 Requires=docker.service
 Requires=etcd.service
-Requires=fleet.service
 Requires=elasticsearch-dv@%i.service
 Wants=elasticsearch-discovery@%i.service
 
@@ -12,7 +11,6 @@ Wants=elasticsearch-discovery@%i.service
 Before=elasticsearch-discovery@%i.service
 After=docker.service
 After=etcd.service
-After=fleet.service
 After=elasticsearch-dv@%i.service
 BindsTo=elasticsearch-dv@%i.service
 
@@ -28,12 +26,11 @@ Environment="ES_CLUSTER=es01"
 LimitNOFILE=65535
 LimitMEMLOCK=infinity
 
-ExecStartPre=-/usr/bin/docker kill %p-%i
 ExecStartPre=-/usr/bin/docker rm %p-%i
-ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch
+ExecStartPre=/usr/bin/docker pull cgswong/elasticsearch:latest
 
 ExecStart=/bin/bash -c '\
-  curl -sf ${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host > /dev/null ;\
+  curl -sf ${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host > /dev/null ;\
   if [ $? -eq 0 ]; then \
     UNICAST_HOSTS=$(for key in $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}/host); do \
       ip=$(echo $key | cut -d/ -f7) ;\
@@ -48,24 +45,23 @@ ExecStart=/bin/bash -c '\
     -P \
     --volumes-from elasticsearch-dv-%i \
     --env ES_CLUSTER=${ES_CLUSTER} \
-    cgswong/elasticsearch \
+    cgswong/elasticsearch:latest \
     --node.name=%H \
     --network.publish_host=${COREOS_PRIVATE_IPV4} \
     --discovery.zen.ping.multicast.enabled=false \
     --discovery.zen.ping.unicast.hosts=$UNICAST_HOSTS'
 
-ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":$(docker port %p-%i | grep 9200 | cut -d: -f2),"cluster_port":$(docker port %p-%i | grep 9300 | cut -d: -f2)}'
+#ExecStartPost=/usr/bin/curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XPUT -d value='{"host":"%H","http_port":$(docker port %p-%i | grep 9200 | cut -d: -f2),"cluster_port":$(docker port %p-%i | grep 9300 | cut -d: -f2)}'
 
-ExecStop=-/usr/bin/docker stop %p-%i
-ExecStop=-/usr/bin/docker kill %p-%i
-ExecStop=-/usr/bin/docker rm %p-%i
+ExecStop=/usr/bin/docker stop %p-%i
 
-ExecStopPost=/usr/bin/bash -c '\
-  if [ $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}/host | wc -l) -le 2 ]; then \
-    curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host?recursive=true -XDELETE ; \
-  else \
-    curl -L http://${COREOS_PRIVATE_IPV4}:4001/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XDELETE ; \
-  fi'
+ExecStopPost=-/usr/bin/docker rm %p-%i
+#ExecStopPost=/usr/bin/bash -c '\
+#  if [ $(etcdctl ls --recursive /services/logging/es/${ES_CLUSTER}/host | wc -l) -le 2 ]; then \
+#    curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host?recursive=true -XDELETE ;\
+#  else \
+#    curl -L http://${COREOS_PRIVATE_IPV4}:2379/v2/keys/services/logging/es/${ES_CLUSTER}/host/${COREOS_PRIVATE_IPV4} -XDELETE ;\
+#  fi'
 
 [Install]
 WantedBy=multi-user.target
