fix(docker-entrypoint): fix exit status
Use trap to properly handle SIGTERM from Docker stop.

--- a/1.5.2/Dockerfile
+++ b/1.5.2/Dockerfile
@@ -1,23 +1,17 @@
-# ################################################################
-# DESC: Docker file to create Elasticsearch container.
-# ################################################################
-
-FROM alpine:latest
+# Docker file to create Elasticsearch container.
+FROM cgswong/java:openjre8
 MAINTAINER Stuart Wong <cgs.wong@gmail.com>
 
 # Setup environment
 ENV ES_VERSION 1.5.2
+ENV ES_PLUGIN_AWS_VERSION 2.7.1
+ENV ES_PLUGIN_BIGDESK_VERSION 2.5.0
+ENV ES_PLUGIN_WHATSON_VERSION 0.1.3
+ENV ES_PLUGIN_KOPF_VERSION 1.0
 ENV ES_HOME /opt/elasticsearch
 ENV ES_VOL /var/lib/elasticsearch
 ENV ES_USER elasticsearch
 ENV ES_GROUP elasticsearch
-
-ENV PKG_URL "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64"
-ENV JAVA_VERSION_MAJOR 8
-ENV JAVA_VERSION_MINOR 45
-ENV JAVA_VERSION_BUILD 14
-ENV JAVA_BASE /usr/local/java
-ENV JAVA_HOME $JAVA_BASE/jdk
 
 # Install requirements and Elasticsearch
 RUN apk --update add \
@@ -25,24 +19,23 @@ RUN apk --update add \
       python \
       py-pip \
       bash && \
-    curl --silent --insecure --location --output /tmp/glibc-2.21-r2.apk "${PKG_URL}/glibc-2.21-r2.apk" &&\
-    curl --silent --insecure --location --output /tmp/glibc-bin-2.21-r2.apk "${PKG_URL}/glibc-bin-2.21-r2.apk" &&\
-    apk add --allow-untrusted \
-      /tmp/glibc-2.21-r2.apk \
-      /tmp/glibc-bin-2.21-r2.apk &&\
-    /usr/glibc/usr/bin/ldconfig /lib /usr/glibc/usr/lib &&\
-    mkdir -p ${ES_VOL}/data ${ES_VOL}/logs ${ES_VOL}/plugins ${ES_VOL}/work ${ES_VOL}/config ${JAVA_BASE} /opt &&\
-    curl --silent --insecure --location --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-b${JAVA_VERSION_BUILD}/jdk-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar.gz | tar zxf - -C $JAVA_BASE &&\
-    ln -s $JAVA_BASE/jdk1.${JAVA_VERSION_MAJOR}.0_${JAVA_VERSION_MINOR} ${JAVA_HOME} &&\
-    curl --silent --insecure --location https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz | tar zxf - -C /opt &&\
+    mkdir -p \
+      ${ES_VOL}/data \
+      ${ES_VOL}/logs \
+      ${ES_VOL}/plugins \
+      ${ES_VOL}/work \
+      ${ES_VOL}/config \
+      /opt &&\
+    curl -sSL --insecure https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz | tar zxf - -C /opt &&\
     ln -s /opt/elasticsearch-${ES_VERSION} ${ES_HOME} &&\
-    rm -rf /tmp/* &&\
     addgroup ${ES_GROUP} &&\
     adduser -h ${ES_HOME} -D -s /bin/bash -G ${ES_GROUP} ${ES_USER} &&\
     chown -R ${ES_USER}:${ES_GROUP} ${ES_HOME}/ ${ES_VOL} &&\
-    ${ES_HOME}/bin/plugin -install elasticsearch/elasticsearch-cloud-aws/2.5.0 --silent --timeout 2m &&\
-    ${ES_HOME}/bin/plugin -install lukas-vlcek/bigdesk --silent --timeout 2m &&\
-    ${ES_HOME}/bin/plugin -install mobz/elasticsearch-head --silent --timeout 2m
+    ${ES_HOME}/bin/plugin -install elasticsearch/elasticsearch-cloud-aws/${ES_PLUGIN_AWS_VERSION} --silent --timeout 2m &&\
+    ${ES_HOME}/bin/plugin -install lukas-vlcek/bigdesk/${ES_PLUGIN_BIGDESK_VERSION} --silent --timeout 2m &&\
+    ${ES_HOME}/bin/plugin -install xyu/elasticsearch-whatson/${ES_PLUGIN_WHATSON_VERSION} --silent --timeout 2m &&\
+    ${ES_HOME}/bin/plugin -install lmenezes/elasticsearch-kopf/${ES_PLUGIN_KOPF_VERSION} --silent --timeout 2m &&\
+    ${ES_HOME}/bin/plugin -install royrusso/elasticsearch-HQ --silent --timeout 2m
 
 # Configure environment
 COPY src/ /
@@ -57,5 +50,5 @@ WORKDIR ${ES_VOL}
 EXPOSE 9200 9300
 
 # Start container
-ENTRYPOINT ["/usr/local/bin/elasticsearch.sh"]
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD [""]
